--- a/client/package.json
+++ b/client/package.json
@@ -9,11 +9,16 @@
         "preview": "vite preview"
     },
     "dependencies": {
+        "clsx": "^2.1.1",
         "framer-motion": "^12.23.26",
+        "lucide-react": "^0.562.0",
         "react": "^18.3.1",
         "react-dom": "^18.3.1",
+        "react-markdown": "^10.1.0",
+        "react-quill": "^2.0.0",
         "react-router-dom": "^7.11.0",
-        "react-scroll": "^1.9.3"
+        "react-scroll": "^1.9.3",
+        "tailwind-merge": "^3.4.0"
     },
     "devDependencies": {
         "@types/react": "^18.3.12",
